# literatureAnalyzer

./: .env.example  .gitignore  BOOK_SCALE_ROADMAP.md  CLAUDE.md  README.md  SMOKE_TEST_S1.md  SMOKE_TEST_S3.md  USER_GUIDE.md  config.example.yaml  literature_analyzer_design.md  pyproject.toml
contract/: pyproject.toml
contract/src/story_contract/: __init__.py
examples/: a_christmas_carol.txt  fetch_novellas.sh  heart_of_darkness.txt  the_cask_of_amontillado.txt  the_clockmaker_of_veil_street.gold.json  the_clockmaker_of_veil_street.txt  the_gift_of_the_magi.txt  the_lantern.txt  the_monkeys_paw.txt
src/lit_analyzer/: __init__.py  analyzer.py  arc.py  bridge.py  chunkcache.py  cli.py  compare.py  config.py  corpus.py  edits.py  entity_eval.py  eventstore.py  lexicon.py  library.py  llm.py  metrics.py  report.py  schemas.py  segment.py  sentiment.py  store.py  structure.py  transform.py  tropes.py  worldlog.py  worldmerge.py
src/lit_analyzer/prompts/: beat_labeler.v1.md  chunked_lector.v1.md  chunked_lector.v2.md  classifier.v1.md  lector.v1.md  recast_beats.v1.md  reskin_world.v1.md
src/lit_analyzer/roles/: __init__.py  beat_labeler.py  beat_recaster.py  lector.py  (+3 more)
tests/: conftest.py  contract.schema.json  test_analyzer.py  test_arc.py  test_bridge.py  test_chunkcache.py  test_compare.py  test_contract.py  test_corpus.py  test_edits.py  test_entity_eval.py  test_hierarchical_beats.py  test_llm_routing.py  test_metrics.py  test_report.py  test_schemas.py  test_segment.py  test_sentiment.py  test_store.py  test_structure.py  test_transform.py  test_worldlog.py  test_worldmerge.py
