[project]
name = "story-contract"
version = "0.1.0"
description = "The shared schema contract between Endless (structure→prose) and the Literature Analyzer (prose→structure): Shape, StyleProfile, WorldSeed, BeatPlan and their parts."
requires-python = ">=3.12"
dependencies = ["pydantic>=2.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/story_contract"]
